# Diplomatura-Ros2

./: .gitignore  README.md
brazo_robot_tarea/: TAREA.md  package.xml  setup.cfg  setup.py
brazo_robot_tarea/test/: calcular_inercia.py
brazo_robot_tarea/worlds/: brazo_robot_Munoz.sdf
ejemplos/01_dockerfile_ros2_demo/: Dockerfile  README.md
ejemplos/02_ros2_gui_x11/: README.md
ejemplos/03_workspace_bind_mount/: Dockerfile  README.md  run.sh
ejemplos/03_workspace_bind_mount/ros2_ws/install/mi_paquete/share/mi_paquete/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ejemplos/04_compose_talker_listener/: Dockerfile  README.md  docker-compose.yml
ejemplos/Tarea/: Dockerfile  TAREA.md  docker-compose.yml
mesh_origin_tools/: package.xml  setup.cfg  setup.py
mesh_origin_tools/worlds/: ejemplo_robot_diferencial.sdf
my_robot_sensores_gazebo/: package.xml  setup.cfg  setup.py
my_robot_sensores_gazebo/launch/: puente_sensores.launch.py
robot_description/: CMakeLists.txt  package.xml
robot_description/launch/: display.launch.py
robot_description/rviz/: robot.rviz
robot_description/scripts/: calcular_origin_por_agujeros.py
robot_description/urdf/: robot.urdf.xacro  robot.xacro
robot_sensores_py/: SolucionTarea6.md  TAREA.md  package.xml  setup.cfg  setup.py
robot_sensores_py/launch/: bridge_Munoz.launch.py
simple_robot_sim/: package.xml  setup.py
temperature_system/: package.xml  setup.py
test_packages/: package.xml  setup.cfg  setup.py
timer_traffic/: package.xml  setup.cfg  setup.py
(+20 files in other folders)
