<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mi_paquete</name>
  <version>0.0.1</version>
  <description>Paquete mínimo para demostrar bind mounts (volúmenes) en Docker</description>
  <maintainer email="alumno@example.com">alumno</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
